Fixed header sizes and extra space on tablet and mobile

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -3,7 +3,31 @@
 body {
     margin-left:1em;
     margin-right:1em;
-    font-size:24pt;
+    font-size:18pt;
+}
+
+h1 {
+    font-size: 48px;
+}
+
+h2 {
+    font-size: 42px;
+}
+
+h3 {
+    font-size: 36px;
+}
+
+h4 {
+    font-size: 30px;
+}
+
+h5 {
+    font-size: 24px;
+}
+
+h6 {
+    font-size: 18px;
 }
 
 .body {
@@ -12,6 +36,10 @@ body {
 
 #forkme {
     display: none;
+}
+
+#footer {
+    font-size: 70%;
 }
 
 /* home page */
