--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -2,11 +2,33 @@
 
 body {
     font-size:14pt;
-    margin-left:3em;
-    margin-right:3em;
 }
 
-.body {
+h1 {
+    font-size: 42px;
+}
+
+h2 {
+    font-size: 36px;
+}
+
+h3 {
+    font-size: 30px;
+}
+
+h4 {
+    font-size: 24px;
+}
+
+h5 {
+    font-size: 18px;
+}
+
+h6 {
+    font-size: 14px;
+}
+
+.wrap {
     width: 35em;
 }
 
